--- a/src/templates/listing.css
+++ b/src/templates/listing.css
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .paging-container {
