--- a/src/layout/index.css
+++ b/src/layout/index.css
@@ -29,57 +29,65 @@ body {
   min-width: 100vw;
   display: flex;
   padding: 20vmin;
-
 }
 
-  a {
-    display: inline-block;
-    vertical-align: top;
-    width: 100px;
-    height: 34px;
-    line-height: 36px;
-    text-transform: uppercase;
-    text-decoration: none;
-    color: #fff;
-    letter-spacing: 0.2em;
-    text-align: center;
-    font-size: 0.8rem;
-    margin: 10px;
-    position: relative;
-  }
+a {
+  display: inline-block;
+  vertical-align: top;
+  width: 100px;
+  height: 34px;
+  line-height: 36px;
+  text-transform: uppercase;
+  text-decoration: none;
+  color: #fff;
+  letter-spacing: 0.2em;
+  text-align: center;
+  font-size: 0.8rem;
+  margin: 10px;
+  position: relative;
+}
 
-  .home-post-wrapper {
-    display: flex;
-    width: 100vw;
-    position: absolute;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    flex-wrap: wrap;
-    justify-content: center;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-  }
+.home-post-wrapper {
+  display: flex;
+  width: 100vw;
+  position: absolute;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  flex-wrap: wrap;
+  justify-content: center;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+}
 
-  .home-post-link { 
-    max-width: 33vw;
-    max-height: 33vh;
-    background: rgb(30 65 30 / 88%);
-    padding: 10rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.home-post-link {
+  max-width: 33vw;
+  max-height: 33vh;
+  background: rgb(30 65 30 / 88%);
+  padding: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.home-post-link:hover {
+  transform: scale(1.1);
+  transition: 0.2s ease-in-out;
+}
 
-  }
-  .home-post-link:hover {
-    transform: scale(1.1);
-    transition: 0.2s ease-in-out;
-  }
+.home-sqaure {
+  width: 33vw;
+  height: 33vh;
+}
 
+.filler {
+  width: 33vw;
+  height: 33vh;
+  /* border: 1px solid green; */
+}
 
+@media screen and (max-width: 1010px) {
   .filler {
-    width: 33vw;
-    height: 33vh;
-    /* border: 1px solid green; */
+    display: none;
   }
+}
