Fix accessibility issues in gatsby-theme-advanced and gatsby-advanced-demo.

--- a/examples/advanced-demo/src/components/Article/styles.css
+++ b/examples/advanced-demo/src/components/Article/styles.css
@@ -4,6 +4,10 @@ code {
   word-break: break-word !important;
 }
 
+code > a {
+  color: rgb(59, 187, 230);
+}
+
 figcaption {
   text-align: center;
 }
