--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,6 +2,8 @@
   justify-content: center;
   align-content: center;
   padding: 10px 5px 5px;
+  text-align: center;
+  display: flex;
 }
 
 .notice-container {
